--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Install libglpk40
+        run: sudo apt-get install libglpk40
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
