--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Install libglpk40
         run: sudo apt-get install libglpk40
 
+      - name: Install libudunits2
+        run: sudo apt-get install libudunits2
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
@@ -24,9 +27,6 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.3.3'
-
-      - name: Install shiny separately
-        run: R -e 'install.packages("shiny")'
 
       - name: Install R Dependencies
         uses: r-lib/actions/setup-renv@v2
