add the rest of the units package name

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
         run: sudo apt-get install libglpk40
 
       - name: Install libudunits2
-        run: sudo apt-get install libudunits2
+        run: sudo apt-get install libudunits2-dev
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
