--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install libproj
         run: sudo apt-get install libproj-dev
 
+      - name: Install libgdal
+        run: sudo apt-get install libgdal-dev
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
